Changelog
=========

1.3 (unreleased)
----------------

- Cleanup package-docs according to current conventions. [WouterVH]

- Add CHANGES.txt [WouterVH]

- Add MANIFEST.in [WouterVH]


1.2 (2010-08-09)
-----------------

- Refactor login/logout methods. [kiorky]

- SECURITY FIX: ensure we are well logged out from CAS and plone on logout from
  plone. [kiorky]

- Merge of the properlogout branch made by kiorky [encolpe]


1.1 (2010-05-03)
----------------

- First release since Derek disparition [encolpe]


1.0 (2008-05-02)
----------------
- Initial release [derek_richardson]
