@@ -2,10 +2,19 @@
 <object xmlns:i18n="http://xml.zope.org/namespaces/i18n"
         i18n:domain="plone"
         name="portal_controlpanel">
-    <configlet title="CAS Configuration" action_id="cas" appId="Plone"
-        category="Products" condition_expr=""
-        url_expr="string:${portal_url}/@@cas_control_panel" visible="True"
-        i18n:attributes="title">
-        <permission>Manage portal</permission>
-    </configlet>
+
+  <configlet
+    title="CAS Configuration"
+    action_id="cas"
+    appId="Plone"
+    category="Products"
+    condition_expr=""
+    url_expr="string:${portal_url}/@@cas_control_panel"
+    visible="True"
+    i18n:attributes="title">
+
+      <permission>Manage portal</permission>
+
+  </configlet>
+
 </object>
